@@ -138,7 +138,6 @@ gdk_return BATimprints(BAT *b);
 gdk_return BATins(BAT *b, BAT *c, bit force);
 BAT *BATintersectcand(BAT *a, BAT *b);
 BAT *BATjoin(BAT *l, BAT *r, BUN estimate);
-BAT *BATkdiff(BAT *b, BAT *c);
 gdk_return BATkey(BAT *b, int onoff);
 BAT *BATleftjoin(BAT *l, BAT *r, BUN estimate);
 BAT *BATmark(BAT *b, oid base);
@@ -2608,7 +2607,6 @@ str sumRef;
 int tableProp;
 str takeOid(oid id, str *val);
 str takeRef;
-str tdiffRef;
 str thetajoinRef;
 str thetasubselectRef;
 str tidRef;
@@ -2618,7 +2616,6 @@ timestamp *timestamp_nil;
 int timestamp_tostr(str *buf, int *len, const timestamp *val);
 int timestamp_tz_fromstr(const char *buf, int *len, timestamp **ret);
 int timestamp_tz_tostr(str *buf, int *len, const timestamp *val, const tzone *timezone);
-str tinterRef;
 int tlbProp;
 int toriginProp;
 void trimMalBlk(MalBlkPtr mb);
