@@ -179,14 +179,6 @@ comment "Select all unique values from the tail of the input.
 	The output BAT is sorted on the tail value.";
 
 
-command tinter( left:bat[:oid,:oid], right:bat[:oid,:oid] ) :bat[:oid,:oid]
-address ALGtinter
-comment "Deprecated, see algebra.semijoin";
-
-command tdiff( left:bat[:oid,:oid], right:bat[:oid,:oid] ) :bat[:oid,:oid]
-address ALGtdiff
-comment "Deprecated, see algebra.subdiff";
-
 # @+ Join operations
 # The core of every relational engine.
 # The join collection provided by the GDK kernel.
