@@ -1,6 +1,9 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Wed Sep 16 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Removed algebra.tdiff and algebra.tinter.
+
 * Mon Sep 14 2015 Sjoerd Mullender <sjoerd@acm.org>
 - Removed algebra.sample.  Use sampe.subuniform instead.
 
